Fixed vector icons example icon file loading

Bug: 787906
Change-Id: I30b6feccf402510a7e5377b3d85ccbc85b3b0616
Reviewed-on: https://chromium-review.googlesource.com/786390
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518754}